<resources>
    <string name="app_name">TatvasoftAssignment10</string>
    <string name="gender_image">Gender Image</string>
    <string name="edit_button">Edit Button</string>
    <string name="delete_button">Delete Button</string>
    <string name="add_user_fab">Add user Fab</string>
    <string name="name">Name</string>
    <string name="contact_number">Contact number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="blood_group">Blood Group</string>
    <string name="country">Country</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="languages_known">Languages Known</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="gujarati">Gujarati</string>
    <string name="add_data">Add</string>
    <string name="update">Update</string>
    <string name="list_text_blood_group">Blood Group : </string>
    <string name="no_data_found">No Data Found!</string>
    <string name="alert_message">Want to delete this data permanently?</string>
    <string name="delete">Delete</string>
    <string name="delete_toast">Data Deleted</string>
    <string name="cancel">Cancel</string>
    <string name="toast_add">Data Added</string>
    <string name="toast_updated">Data Updated</string>
    <string name="err_enter_name">Enter name</string>
    <string name="err_contact_no">Enter contact number</string>
    <string name="err2_contact_no">Enter valid contact number</string>
    <string name="err_birth_date">Select birth date</string>
    <string name="err_blood_group">Select blood group</string>
    <string name="err_country">Select country</string>
    <string name="err_gender">Select gender</string>
    <string name="err_language">Select atleast one language</string>
    <string name="divider">|</string>
    <string name="alert_title">Delete data of </string>
    <string name="questionMark"> \?</string>
    <string name="add_data_title">Add Data</string>
    <string name="update_data_title">Update Data</string>
    <string name="user_list_title">User List</string>

    <string-array name="blood_group_array">
        <item>O-</item>
        <item>O+</item>
        <item>A-</item>
        <item>A+</item>
        <item>B-</item>
        <item>B+</item>
        <item>AB-</item>
        <item>AB+</item>
    </string-array>

    <string-array name="countries_array">
            <item>Afghanistan</item>
            <item>Albania</item>
            <item>Algeria</item>
            <item>American Samoa</item>
            <item>Andorra</item>
            <item>Angola</item>
            <item>Anguilla</item>
            <item>Antarctica</item>
            <item>Antigua and Barbuda</item>
            <item>Argentina</item>
            <item>Armenia</item>
            <item>Aruba</item>
            <item>Australia</item>
            <item>Austria</item>
            <item>Azerbaijan</item>
            <item>Bahamas</item>
            <item>Bahrain</item>
            <item>Bangladesh</item>
            <item>Barbados</item>
            <item>Belarus</item>
            <item>Belgium</item>
            <item>Belize</item>
            <item>Benin</item>
            <item>Bermuda</item>
            <item>Bhutan</item>
            <item>Bolivia</item>
            <item>Bosnia and Herzegovina</item>
            <item>Botswana</item>
            <item>Brazil</item>
            <item>British Indian Ocean Territory</item>
            <item>British Virgin Islands</item>
            <item>Brunei</item>
            <item>Bulgaria</item>
            <item>Burkina Faso</item>
            <item>Burundi</item>
            <item>Cambodia</item>
            <item>Cameroon</item>
            <item>Canada</item>
            <item>Cape Verde</item>
            <item>Cayman Islands</item>
            <item>Central African Republic</item>
            <item>Chad</item>
            <item>Chile</item>
            <item>China</item>
            <item>Christmas Island</item>
            <item>Cocos Islands</item>
            <item>Colombia</item>
            <item>Comoros</item>
            <item>Cook Islands</item>
            <item>Costa Rica</item>
            <item>Croatia</item>
            <item>Cuba</item>
            <item>Cyprus</item>
            <item>Czech Republic</item>
            <item>Democratic Republic of the Congo</item>
            <item>Denmark</item>
            <item>Djibouti</item>
            <item>Dominica</item>
            <item>Dominican Republic</item>
            <item>East Timor</item>
            <item>Ecuador</item>
            <item>Egypt</item>
            <item>El Salvador</item>
            <item>Equatorial Guinea</item>
            <item>Eritrea</item>
            <item>Estonia</item>
            <item>Ethiopia</item>
            <item>Falkland Islands</item>
            <item>Faroe Islands</item>
            <item>Fiji</item>
            <item>Finland</item>
            <item>France</item>
            <item>French Polynesia</item>
            <item>Gabon</item>
            <item>Gambia</item>
            <item>Georgia</item>
            <item>Germany</item>
            <item>Ghana</item>
            <item>Gibraltar</item>
            <item>Greece</item>
            <item>Greenland</item>
            <item>Grenada</item>
            <item>Guam</item>
            <item>Guatemala</item>
            <item>Guinea</item>
            <item>Guinea-Bissau</item>
            <item>Guyana</item>
            <item>Haiti</item>
            <item>Honduras</item>
            <item>Hong Kong</item>
            <item>Hungary</item>
            <item>Iceland</item>
            <item>India</item>
            <item>Indonesia</item>
            <item>Iran</item>
            <item>Iraq</item>
            <item>Ireland</item>
            <item>Isle of Man</item>
            <item>Israel</item>
            <item>Italy</item>
            <item>Ivory Coast</item>
            <item>Jamaica</item>
            <item>Japan</item>
            <item>Jersey</item>
            <item>Jordan</item>
            <item>Kazakhstan</item>
            <item>Kenya</item>
            <item>Kiribati</item>
            <item>Kuwait</item>
            <item>Kyrgyzstan</item>
            <item>Laos</item>
            <item>Latvia</item>
            <item>Lebanon</item>
            <item>Lesotho</item>
            <item>Liberia</item>
            <item>Libya</item>
            <item>Liechtenstein</item>
            <item>Lithuania</item>
            <item>Luxembourg</item>
            <item>Macao</item>
            <item>Macedonia</item>
            <item>Madagascar</item>
            <item>Malawi</item>
            <item>Malaysia</item>
            <item>Maldives</item>
            <item>Mali</item>
            <item>Malta</item>
            <item>Marshall Islands</item>
            <item>Mauritania</item>
            <item>Mauritius</item>
            <item>Mayotte</item>
            <item>Mexico</item>
            <item>Micronesia</item>
            <item>Moldova</item>
            <item>Monaco</item>
            <item>Mongolia</item>
            <item>Montenegro</item>
            <item>Montserrat</item>
            <item>Morocco</item>
            <item>Mozambique</item>
            <item>Myanmar</item>
            <item>Namibia</item>
            <item>Nauru</item>
            <item>Nepal</item>
            <item>Netherlands</item>
            <item>Netherlands Antilles</item>
            <item>New Caledonia</item>
            <item>New Zealand</item>
            <item>Nicaragua</item>
            <item>Niger</item>
            <item>Nigeria</item>
            <item>Niue</item>
            <item>North Korea</item>
            <item>Northern Mariana Islands</item>
            <item>Norway</item>
            <item>Oman</item>
            <item>Pakistan</item>
            <item>Palau</item>
            <item>Panama</item>
            <item>Papua New Guinea</item>
            <item>Paraguay</item>
            <item>Peru</item>
            <item>Philippines</item>
            <item>Pitcairn</item>
            <item>Poland</item>
            <item>Portugal</item>
            <item>Puerto Rico</item>
            <item>Qatar</item>
            <item>Republic of the Congo</item>
            <item>Romania</item>
            <item>Russia</item>
            <item>Rwanda</item>
            <item>Saint Barthelemy</item>
            <item>Saint Helena</item>
            <item>Saint Kitts and Nevis</item>
            <item>Saint Lucia</item>
            <item>Saint Martin</item>
            <item>Saint Pierre and Miquelon</item>
            <item>Saint Vincent and the Grenadines</item>
            <item>Samoa</item>
            <item>San Marino</item>
            <item>Sao Tome and Principe</item>
            <item>Saudi Arabia</item>
            <item>Senegal</item>
            <item>Serbia</item>
            <item>Seychelles</item>
            <item>Sierra Leone</item>
            <item>Singapore</item>
            <item>Slovakia</item>
            <item>Slovenia</item>
            <item>Solomon Islands</item>
            <item>Somalia</item>
            <item>South Africa</item>
            <item>South Georgia and the South Sandwich Islands</item>
            <item>South Korea</item>
            <item>Spain</item>
            <item>Sri Lanka</item>
            <item>Sudan</item>
            <item>Suriname</item>
            <item>Svalbard and Jan Mayen</item>
            <item>Swaziland</item>
            <item>Sweden</item>
            <item>Switzerland</item>
            <item>Syria</item>
            <item>Taiwan</item>
            <item>Tajikistan</item>
            <item>Tanzania</item>
            <item>Thailand</item>
            <item>Togo</item>
            <item>Tokelau</item>
            <item>Tonga</item>
            <item>Trinidad and Tobago</item>
            <item>Tunisia</item>
            <item>Turkey</item>
            <item>Turkmenistan</item>
            <item>Turks and Caicos Islands</item>
            <item>Tuvalu</item>
            <item>U.S. Virgin Islands</item>
            <item>Uganda</item>
            <item>Ukraine</item>
            <item>United Arab Emirates</item>
            <item>United Kingdom</item>
            <item>United States</item>
            <item>Uruguay</item>
            <item>Uzbekistan</item>
            <item>Vanuatu</item>
            <item>Vatican</item>
            <item>Venezuela</item>
            <item>Vietnam</item>
            <item>Wallis and Futuna</item>
            <item>Western Sahara</item>
            <item>Yemen</item>
            <item>Zambia</item>
            <item>Zimbabwe</item>
        </string-array>
</resources>