<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/list_cardView">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/genderImage"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:padding="@dimen/list_text_padding"
            android:contentDescription="@string/gender_image" />

        <LinearLayout
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/list_text_padding"
                android:paddingEnd="@dimen/list_text_padding"
                android:textSize="@dimen/list_name_text_size"/>
            <TextView
                android:id="@+id/bloodGroupTextView"
                android:text="@string/list_text_blood_group"
                style="@style/list_text_details"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/contactNoTextView"
                    style="@style/list_text_details" />
                <TextView
                    android:text="@string/divider"
                    style="@style/list_text_details"/>
                <TextView
                    android:id="@+id/countryTextView"
                    style="@style/list_text_details"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/editButton"
                style="@style/list_button"
                android:contentDescription="@string/edit_button" />
            <ImageView
                android:id="@+id/deleteButton"
                style="@style/list_button"
                android:contentDescription="@string/delete_button" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>